[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2.11", features = ["derive"] }
humantime = "2.1"
env_logger = "0.9.1"
fern = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.138"
sled = "0.34.4"
serde_json = "1.0"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }