[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
async-std = "1.12.0"
anyhow = "1.0"
chrono = "0.4"
humantime = "2.1"
clap = { version = "3.2.11", features = ["derive"] }
env_logger = "0.9.1"
fern = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.138"
serde_json = "1.0"
sled = "0.34.4"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }